rtspsrc: use aggregate control for PLAY/PAUSE/TEARDOWN

Use the aggregate control instead of the original request url to perform
PAUSE/PLAY and TEARDOWN.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=721003